<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.suffolk.jsimons3.heart_ratecalculator.MainActivity"
    tools:showIn="@layout/activity_main">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ageview"
            android:id="@+id/ageview"
            android:layout_row="0"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maxrateview"
            android:id="@+id/maxrateview"
            android:layout_row="1"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maxratetextview"
            android:id="@+id/maxratetextview"
            android:layout_row="1"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/targetrateview"
            android:id="@+id/targetrateview"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_rowSpan="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agetextview"
        android:id="@+id/agetextview"
        android:layout_row="0"
        android:layout_column="1" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:textColor="#00000000"
            android:id="@+id/ageeditText"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/ageeditText" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/targetratetextview"
            android:id="@+id/targetratetextview"
            android:layout_row="3"
            android:layout_column="1" />


</GridLayout>
